]

[ File changes:
	D = Deleted,
	M = Modified,
	A = Added.

	A...
		data/
			actions/
				scripts/
					liquids/
						*.lua
							* Added liquids files
							* Added potions of 8.2 protocol
					tools/
						blessed_wooden_stake.lua
						obsidian_knife.lua
							* Added

					other/
						stuffeddragon.lua
							* Added as example of position param for doCreatureSay function

			creaturescripts/
				scripts/
					firstitems.lua
						* Moved first items script to creature events instead of move events

			globalevents/
				globalevents.xml
				lib/
				scripts/
					* Introduced global events
				scripts/
					*.lua
						* Added basic scripts
			lib/
				data.lua
				constant.lua
				function.lua
				compat.lua
				database.lua
				exhaustion.lua
					* Added files created from global.lua (organized)
				
			logs/
				server/
					* Created directory for GUI logs

			monsters/
				*/*.xml
					* Added most of 8.1 protocol monsters
					* Added missing monsters and bosses
					* Added few monsters of procotol 8.2
					* Added alot of protocol 8.3 monsters

			npc/
				*.xml
				lib/
					*.xml
						* Lightweight npc examples
				scripts/
					*.lua
						* Added more NPC's examples

			talkactions/
				scripts/
					shutdown.lua
					pvp.lua
						* Talkaction based on new LUA function
					position.lua
					money.lua
						* Talkaction deprecated from commands
					online.lua
					clean.lua
					broadcast.lua
						* Talkaction based on new LUA function, deprecated from commands
					broadcastclass.lua
					mode.lua
					multicheck.lua
					masskick.lua
						* Added (...)
					buypremium.lua
						* File name change
					*.lua
						* Deprecated commands

			weapons/
				scripts/
					burst_arrow.lua
						* Moved explosive_arrow.lua

			XML/
				servers.xml
					* GameServers class usage example

	M...
		data/
			actions/
				scripts/
					tools/
						fishing.lua
							* Fixed worms usage
						rope.lua
							* Protocol 8.2 rope spots
					other/